--- a/layout/styles.css
+++ b/layout/styles.css
@@ -55,6 +55,54 @@ body {
 header{
 	border: 2px solid lightblue;
 	border-radius: 5px;
+
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.header-title{
+	flex: 5;
+	padding-left: 20px;
+}
+
+.current-user-name{
+	text-align: right;
+
+	flex: 2;
+}
+
+.header-buttons{
+	margin-left: 10px;
+	margin-right: 10px;
+
+	flex: 3;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.header-button {
+	flex-basis: 30%;
+
+	background-color: #FFFFFF;
+	border: 2px solid #4CAF50;
+	border-radius: 5px;
+	
+	font-size: 0.9em;
+	color: #4CAF50;
+	text-align: center;
+
+	margin: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.header-button:hover {
+    background-color: #4CAF50;
+    color: white;
 }
 
 footer{
@@ -68,4 +116,32 @@ footer{
 
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.filter-block{
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+	display: flex;
+	flex-direction: column;
+}
+
+.filter-apply{
+	background-color: #4CAF50;
+	border-radius: 5px;
+	border: none;
+	
+	font-size: 0.9em;
+	color: #FFFFFF;
+	text-align: center;
+
+	margin: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 150px;
+	cursor: pointer;
 }
