--- a/layout/styles.css
+++ b/layout/styles.css
@@ -1,102 +1,96 @@
 body {
-	background-color: #BBB;
-	font-family: Helvetica, sans-serif;
-	padding-bottom: 100px;
-	
-	display: flex;
-	justify-content: space-around;
-	flex-direction: row;
+    background-color: #BBB;
+    font-family: Helvetica, sans-serif;
+
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
 
-.page{
-	background-color: #FFF;
-	padding: 10px;
-	border: 2px solid #BBB;
-	border-radius: 10px;
+.page {
+    background-color: #FFF;
+    padding: 10px;
+    border: 2px solid #BBB;
+    border-radius: 10px;
 
-	flex-basis: 90%;
+    flex-basis: 90%;
 }
 
 .container {
-  background-color: #FFF;
-  margin-top: 10px;
-  margin-bottom: 10px;
+    background-color: #FFF;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.page-left-side{
-	border: 2px solid lightgreen;
-	border-radius: 5px;
-
-	flex-basis: 5%;
+.page-left-side {
+    flex-basis: 5%;
 }
 
-.page-right-side{
-	border: 2px solid lightgreen;
-	border-radius: 5px;
-	padding: 10px;
+.page-right-side {
+    padding: 10px;
 
-	flex-basis: 20%;
+    flex-basis: 20%;
 }
 
-.content{
-	padding: 10px;
-	border: 2px solid lightgreen;
-	border-radius: 5px;
+.content {
+    padding: 10px;
+    border: 2px solid lightgreen;
+    border-radius: 5px;
 
-	flex-basis: 70%;
-	display: flex;
-	flex-direction: column;
+    flex-basis: 70%;
+    display: flex;
+    flex-direction: column;
 }
 
-header{
-	border: 2px solid lightblue;
-	border-radius: 5px;
+header {
+    border: 2px solid lightgreen;
+    border-radius: 5px;
 
-	display: flex;
-	flex-direction: row;
-	align-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.header-title{
-	flex: 5;
-	padding-left: 20px;
+.header-title {
+    flex: 5;
+    padding-left: 20px;
 }
 
-.current-user-name{
-	text-align: right;
+.current-user-name {
+    text-align: right;
 
-	flex: 2;
+    flex: 2;
 }
 
-.header-buttons{
-	margin-left: 10px;
-	margin-right: 10px;
+.header-buttons {
+    margin-left: 10px;
+    margin-right: 10px;
 
-	flex: 3;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+    flex: 3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .header-button {
-	flex-basis: 30%;
+    flex-basis: 30%;
 
-	background-color: #FFFFFF;
-	border: 2px solid #4CAF50;
-	border-radius: 5px;
-	
-	font-size: 0.9em;
-	color: #4CAF50;
-	text-align: center;
+    background-color: #FFFFFF;
+    border: 2px solid #4CAF50;
+    border-radius: 5px;
 
-	margin: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	cursor: pointer;
+    font-size: 1em;
+    color: #4CAF50;
+    text-align: center;
+
+    margin: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;
     transition-duration: 0.5s;
 }
 
@@ -105,43 +99,93 @@ header{
     color: white;
 }
 
-footer{
-	border: 2px solid lightblue;
-	border-radius: 5px;
+footer {
+    border: 2px solid lightgreen;
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-.filter{
-	border: 2px solid lightblue;
-	border-radius: 5px;
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-around;
+.footer-info p {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.filter-block{
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+.footer-info {
+    text-align: center;
 
-	display: flex;
-	flex-direction: column;
+    flex-basis: 60%;
 }
 
-.filter-apply{
-	background-color: #4CAF50;
-	border-radius: 5px;
-	border: none;
-	
-	font-size: 0.9em;
-	color: #FFFFFF;
-	text-align: center;
+.filter {
+    border: 2px solid lightblue;
+    border-radius: 5px;
 
-	margin: 10px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	width: 150px;
-	cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.filter-block {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 80%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.filter-hashtag-block {
+    margin-bottom: 10px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+}
+
+.filter-block label {
+    margin-bottom: 10px;
+}
+
+.hashtag-input-static {
+    width: 10px;
+}
+
+.hashtag-input {
+    width: 70%;
+}
+
+.hashtag-remove-button {
+    background-color: #FFFFFF;
+    border: 2px solid #cf3e12;
+    border-radius: 5px;
+
+    font-size: 1em;
+    color: #cf3e12;
+    text-align: center;
+
+    cursor: pointer;
+}
+
+.filter-apply {
+    background-color: #4CAF50;
+    border-radius: 5px;
+    border: none;
+
+    font-size: 1em;
+    color: #FFFFFF;
+    text-align: center;
+
+    margin: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 40%;
+    cursor: pointer;
 }
