3 task completed. The layout of the Index page is ready.

--- a/layout/index.html
+++ b/layout/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>The Instagram Clone</title>
 
@@ -19,22 +20,268 @@
             <p>Sieviaryn Budrys</p>
         </div>
 
-        <div class="header-buttons">
+        <nav class="header-nav">
             <button type="button" class="header-button">My Photos</button>
             <button type="button" class="header-button">Upload</button>
             <button type="button" class="header-button">Log Out</button>
-        </div>
+        </nav>
     </header>
 
     <div class="container">
 
         <div class="page-left-side"></div>
 
-        <div class="content">
-            <p>To Do</p>
-        </div>
+        <section class="content">
 
-        <div class="page-right-side">
+            <div class="content-row">
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic3.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>180</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#aspiring #rest #nature #lunch ...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                       <img src="photos/karatkievic1.jpg" alt="fishing with Uladzimir"
+                            width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_full_32.png" alt="likes: ">
+                            <p>223</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#rest #fishing #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic2.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>132</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#tranquil #half-face #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="content-row">
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic3.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>180</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#aspiring #rest #nature #lunch ...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic1.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_full_32.png" alt="likes: ">
+                            <p>223</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#rest #fishing #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic2.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>132</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#tranquil #half-face #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="content-row">
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic3.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>180</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#aspiring #rest #nature #lunch ...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic1.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_full_32.png" alt="likes: ">
+                            <p>223</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#rest #fishing #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-date">
+                            <p>20.12.1980</p>
+                        </div>
+                        <div class="post-author">
+                            <p>Karatkievic</p>
+                        </div>
+                    </div>
+
+                    <div class="post-image">
+                        <img src="photos/karatkievic2.jpg" alt="fishing with Uladzimir"
+                             width="250" height="250">
+                    </div>
+
+                    <div class="post-details">
+                        <div class="post-likes">
+                            <img src="icons/heart_empty_32.png" alt="likes: ">
+                            <p>132</p>
+                        </div>
+                        <div class="post-hashtags">
+                            <p>#tranquil #half-face #nature</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <aside class="page-right-side">
             <div class="filter">
                 <h3>Filter</h3>
 
@@ -54,32 +301,40 @@
                     <div class="filter-hashtag-block">
                         <input type="text" class="hashtag-input-static" value="#" disabled>
 
-                        <input type="text" name="filter-hashtag-1" id="filter-hashtag-1"
-                               placeholder="add hashtag" class="hashtag-input" value="hashtag">
+                        <div class="hashtag-subdib">
+                            <input type="text" name="filter-hashtag-1" id="filter-hashtag-1"
+                                   placeholder="add hashtag" class="hashtag-input" value="sun">
 
-                        <button type="button" class="hashtag-remove-button">-</button>
+                            <button type="button" class="hashtag-remove-button">-</button>
+                        </div>
                     </div>
 
                     <div class="filter-hashtag-block">
                         <input type="text" class="hashtag-input-static" value="#" disabled>
 
-                        <input type="text" name="filter-hashtag-2" id="filter-hashtag-2"
-                               placeholder="add hashtag" class="hashtag-input" value="hashtag">
+                        <div class="hashtag-subdib">
+                            <input type="text" name="filter-hashtag-2" id="filter-hashtag-2"
+                                   placeholder="add hashtag" class="hashtag-input" value="nature">
 
-                        <button type="button" class="hashtag-remove-button">-</button>
+                            <button type="button" class="hashtag-remove-button">-</button>
+                        </div>
                     </div>
 
                     <div class="filter-hashtag-block">
                         <input type="text" class="hashtag-input-static" value="#" disabled>
 
-                        <input type="text" name="filter-hashtag-3" id="filter-hashtag-3"
-                               placeholder="another hashtag" class="hashtag-input">
+                        <div class="hashtag-subdib">
+                            <input type="text" name="filter-hashtag-3" id="filter-hashtag-3"
+                                   placeholder="add hashtag" class="hashtag-input">
+                        </div>
                     </div>
                 </div>
 
                 <button type="button" class="filter-apply">Apply</button>
             </div>
-        </div>
+
+            <button class="load-more-button">Load More</button>
+        </aside>
 
     </div>
 
