--- a/layout/index.html
+++ b/layout/index.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
     <title>The Instagram Clone</title>
 
 </head>
