most functions added

--- a/layout/css/index.css
+++ b/layout/css/index.css
@@ -345,6 +345,7 @@ footer {
     .filter-date-author {
         flex-direction: column;
         justify-content: space-around;
+        flex-wrap: nowrap;
     }
 
     .filter-block{
