--- a/layout/index.html
+++ b/layout/index.html
@@ -3,9 +3,13 @@
 <head>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="script.js"></script>
     <title>The Instagram Clone</title>
+
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <!--   scripts   -->
+    <script src="scripts/dataModule.js"></script>
+    <script src="scripts/functionsModule.js"></script>
 
 </head>
 
