--- a/theInstagramClone/static/css/index.css
+++ b/theInstagramClone/static/css/index.css
@@ -97,6 +97,18 @@ header {
     color: white;
 }
 
+.button-with-hover:disabled{
+    background-color: white;
+    border: 2px solid gray;
+    color: gray;
+}
+
+.button-with-hover:disabled:hover{
+    background-color: white;
+    border: 2px solid gray;
+    color: gray;
+}
+
 /*--- footer ---*/
 
 footer {
@@ -266,6 +278,7 @@ footer {
     padding-right: 5px;
     margin: 10px;
     box-shadow: 5px 5px 5px grey;
+    height: 380px;
 
     display: flex;
     flex-direction: column;
@@ -416,8 +429,9 @@ footer {
 .modal-post.post-image {
     height: auto;
 
-    flex-basis: 80%;
+    flex-basis: 70%;
     display: flex;
+    flex-direction: column;
 }
 
 .modal-post img {
@@ -436,17 +450,13 @@ footer {
 }
 
 .modal-post.post-details {
-    border: 2px solid lightgray;
-    border-radius: 5px;
+    border: none;
+    border-left: 5px solid lightgray;
     padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: left;
     overflow: auto;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 }
 
 .modal-post.post-user {
@@ -455,6 +465,11 @@ footer {
 
 .modal-post.post-details h4 {
     margin: 2px;
+}
+
+.modal-post.post-hashtags{
+    white-space: normal;
+    text-overflow: unset;
 }
 
 .modal-post.post-buttons {
@@ -472,7 +487,7 @@ footer {
     cursor: pointer;
 }
 
-.modal-post-delete:hover {
+.delete:hover {
     background-color: crimson;
     border: 2px solid crimson;
 }
@@ -534,6 +549,7 @@ footer {
 
 textarea {
     height: 100px;
+    min-height: 40px;
     box-sizing: border-box;
     border: 2px solid lightgray;
     border-radius: 4px;
@@ -541,4 +557,16 @@ textarea {
     resize: none;
     font-family: Helvetica, sans-serif;
     font-size: 18px;
+}
+
+.error-span{
+    display: none;
+    color: red;
+}
+
+.editing-hashtags{
+    max-height: 150px;
+    overflow: auto;
+    border-radius: 5px;
+    border: 2px solid lightgray;
 }
