added likes and logging support via xhr. now all functions work with xhr.
TODO:
-add multer to upload images
-add long polling

--- a/theInstagramClone/static/css/index.css
+++ b/theInstagramClone/static/css/index.css
@@ -57,6 +57,11 @@ header {
     padding-left: 20px;
 }
 
+#siteTitle{
+    cursor: pointer;
+    color: lightseagreen;
+}
+
 .current-user-name {
     text-align: right;
     border-bottom: 5px solid lightseagreen;
